--- a/src/app/landing/new-movies/new-movies.component.html
+++ b/src/app/landing/new-movies/new-movies.component.html
@@ -1,6 +1,9 @@
 <div class="new-movies" id="new-movies">
-    <h2 translate>New on VideoFlix</h2>
-    <h3 translate>Unique films, series and originals that are exclusively available on our platform and stand out from
-        other streaming services. streaming services.</h3>
+    <div class="text-box">
+        <h2 translate>New on VideoFlix</h2>
+        <h3 translate>Unique films, series and originals that are exclusively available on our platform and stand out
+            from
+            other streaming services. streaming services.</h3>
+    </div>
     <img src="/assets/img/new_movie.jpg" alt="">
 </div>
