--- a/src/app/module/category/category-header/category-header.component.html
+++ b/src/app/module/category/category-header/category-header.component.html
@@ -1,20 +1,26 @@
 <div class="category">
-    <div class="category-box">
+    <div class="category-box my ">
+
         <a href="/my" translate>My</a>
+
     </div>
-    <div class="category-box">
+    <div class="category-box movies">
         <a href="/movies" translate>Movie</a>
     </div>
-    <div class="category-box">
+    <div class="category-box series">
         <a href="/series" translate>Series</a>
     </div>
-    <div class="category-box">
-        <a href="/nature" translate>Nature</a>
+    <div class="category-box nature">
+
+        <a href="/nature" translate>
+            <p>Nature</p>
+        </a>
+
     </div>
-    <div class="category-box">
+    <div class="category-box funny">
         <a href="/funny" translate>Funny</a>
     </div>
-    <div class="category-box">
+    <div class="category-box knowledge">
         <a href="/knowledge" translate>Knowledge</a>
     </div>
 </div>
