--- a/src/app/landing/new-movies/new-movies.component.scss
+++ b/src/app/landing/new-movies/new-movies.component.scss
@@ -2,14 +2,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   padding: 25px;
-  max-width: 100%;
+  width: 100%;
   height: fit-content;
   img {
     margin-top: 40px;
     margin-bottom: 40px;
-    width: 100%;
+    width: 50%;
+    border-radius: 10px;
+    border: 5px solid #232323;
+    z-index: 5;
   }
   h1,
   h3 {
@@ -21,4 +23,13 @@
     font-size: 38px;
     line-height: 120%;
   }
+  border-bottom: 10px solid #232323;
+}
+.text-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 25px;
+  margin-right: 25px;
 }
