--- a/src/app/module/category/content-box.scss
+++ b/src/app/module/category/content-box.scss
@@ -3,7 +3,6 @@
   justify-content: flex-start;
   flex-direction: column;
   margin-left: 7%;
-  margin-top: 35px;
   max-width: 100%;
 
   p {
@@ -16,6 +15,10 @@
       margin-left: 15px;
     }
   }
+}
+h2 {
+  margin-top: 00px;
+  margin-bottom: 00px;
 }
 
 .category-link {
@@ -48,7 +51,7 @@
   justify-content: start;
   max-width: 200px;
   min-width: 200px;
-  border-radius: 10px;
+  border-radius: 5px;
   aspect-ratio: 16 / 9;
   box-shadow: 0px 6px 10px 5px #000000;
   font-size: 24px !important;
@@ -56,6 +59,9 @@
     text-decoration: none;
     color: white;
     z-index: 10;
+    font-family: cursive;
+    font-style: oblique;
+    font-variant: all-petite-caps;
   }
   p {
     margin: 0;
